ros2_study/log/build_2025-11-12_12-30-42/my_first_package/stderr.log
  File "/home/hyh/ros2_study/install/my_first_package/lib/python3.10/site-packages/my_first_package/dist_turtle_action_server.py", line 54
    			feedback_msg.remained_dist = goal_handle.request.dist - self.total_dist goal_handle.publish_feedback(feedback_msg)
    			                                                                        ^^^^^^^^^^^
SyntaxError: invalid syntax

